<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/fragment_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_24" />

    <item android:id="@+id/fragment_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite_24" />

    <item android:id="@+id/fragment_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_24" />

</menu>